--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -9,3 +9,9 @@ ITEMS_CONTAINING=Items containing "{0}"
 LABEL_ALL=All
 LABEL_ACTIVE=Active
 LABEL_COMPLETED=Completed
+# Hello Panel
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
+# App Descriptor
+appTitle=Hello World
+appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
