--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,14 @@ ITEMS_CONTAINING=Items containing "{0}"
 LABEL_ALL=All
 LABEL_ACTIVE=Active
 LABEL_COMPLETED=Completed
+# Hello Panel
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
+# App Descriptor
+appTitle=Hello World
+appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
+homePageTitle=Walkthrough
+helloPanelTitle=Hello World
+
+openDialogButtonText=Say Hello With Dialog
+dialogCloseButtonText=Ok 
