--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -9,3 +9,9 @@ ITEMS_CONTAINING=Einträge mit "{0}"
 LABEL_ALL=Alle
 LABEL_ACTIVE=Aktiv
 LABEL_COMPLETED=Erledigt
+# Hello Panel
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
+# App Descriptor
+appTitle=Hello World
+appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
