--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,34 +1,7 @@
-# App Descriptor
-appTitle=Hello World
-appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
+# Field labels
+firstName=First Name
+lastName=Last Name
+enabled=Enabled
 
-# Hello Panel
-showHelloButtonText=Say Hello
-helloMsg=Hello {0}
-homePageTitle=Walkthrough
-helloPanelTitle=Hello World
-openDialogButtonText=Say Hello With Dialog
-dialogCloseButtonText=Ok
-
-# Invoice List
-invoiceListTitle=Invoices
-invoiceStatusA=New
-invoiceStatusB=In Progress
-invoiceStatusC=Done
-columnQuantity=Quantity
-columnName=Name
-columnSupplier=Supplier
-columnStatus=Status
-columnPrice=Price
-
-# Detail Page
-detailPageTitle=Walkthrough - Details
-ratingConfirmation=You have rated this product with {0} stars
-dateTitle=Order date
-quantityTitle=Quantity
-
-# Product Rating
-productRatingLabelInitial=Please rate this product
-productRatingLabelIndicator=Your rating: {0} out of {1}
-productRatingLabelFinal=Thank you!
-productRatingButton=Rate
+# Screen titles
+panelHeaderText=Data Binding Basics
