--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -1,17 +1,7 @@
-TITLE=Todos
-INPUT_PLACEHOLDER=Was muss getan werden?
-CLEAR_COMPLETED=Erledigte Einträge entfernen
-ACTIVE_ITEMS=Aktive Einträge
-ACTIVE_ITEMS_CONTAINING=Aktive Einträge mit "{0}"
-COMPLETED_ITEMS=Erledigte Einträge
-COMPLETED_ITEMS_CONTAINING=Erledigte Einträge mit "{0}"
-ITEMS_CONTAINING=Einträge mit "{0}"
-LABEL_ALL=Alle
-LABEL_ACTIVE=Aktiv
-LABEL_COMPLETED=Erledigt
-# Hello Panel
-showHelloButtonText=Say Hello
-helloMsg=Hello {0}
-# App Descriptor
-appTitle=Hello World
-appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
+# Field labels
+firstName=Vorname
+lastName=Nachname
+enabled=Aktiviert
+
+# Screen titles
+panelHeaderText=Data Binding Grundlagen
