--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -2,6 +2,11 @@
 firstName=Vorname
 lastName=Nachname
 enabled=Aktiviert
+address=Adresse
+
 
 # Screen titles
-panelHeaderText=Data Binding Grundlagen
+panel1HeaderText=Data Binding Grundlagen
+panel2HeaderText=Adressdetails
+
+ 
