--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -5,3 +5,8 @@ enabled=Enabled
 
 # Screen titles
 panelHeaderText=Data Binding Basics
+
+# Email
+sendEmail=Send EMail
+mailSubject=Hi {0}!
+mailBody=How are you?
