Product.json eklendi

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,8 @@ panelHeaderText=Data Binding Basics
 sendEmail=Send EMail
 mailSubject=Hi {0}!
 mailBody=How are you?
+
+
+# Product list
+productListTitle=Product List
+stockValue=Current Stock Value
