--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -2,16 +2,29 @@
 firstName=First Name
 lastName=Last Name
 enabled=Enabled
+address=Address
+salesAmount=Sales Amount
 
 # Screen titles
-panelHeaderText=Data Binding Basics
+panel1HeaderText=Data Binding Basics
+panel2HeaderText=Address Details
+panel3HeaderText=Aggregation Binding
+panel4HeaderText=Product Details
 
 # Email
 sendEmail=Send EMail
 mailSubject=Hi {0}!
 mailBody=How are you?
 
-
 # Product list
 productListTitle=Product List
 stockValue=Current Stock Value
+
+# Product Details
+ProductID=Product ID
+ProductName=Product Name
+QuantityPerUnit=Quantity per Unit
+UnitPrice=Unit Price
+UnitsInStock=Number of Units in Stock
+Discontinued=Discontinued
+panel4HeaderText=Detail
